syntax = "proto3";

package api;

option go_package = "reservations/pkg/reservations";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service ReservationService {
  rpc CreateReservation(CreateReservationRequest) returns (CreateReservationResponse) {
    option (google.api.http) = {
      post: "/v1/reservations"
      body: "*"
    };
  }

  rpc CancelReservation(CancelReservationRequest) returns (CancelReservationResponse) {
    option (google.api.http) = {
      delete: "/v1/reservations"
      body: "*"
    };
  }

}

message Reservation {
  int32 id = 1;
  int32 roomId = 2;
  string startingDate = 3;
  string endDate = 4;
}

message CreateReservationRequest {
  Reservation reservation = 1;
}

message CreateReservationResponse {
  Reservation reservation = 1;
}

message CancelReservationRequest {
  int32 id = 1;
}

message CancelReservationResponse {
  string message = 1;
}